# text-representations

./: .gitignore  pyproject.toml
notebooks/: Faiss.ipynb  Title indexing.ipynb
representations/: contracts.py  patterns.py  utils.py
