[tool.poetry]
name = "representations"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.2"
torch = "*"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "7.34"
tqdm = "^4.64.0"
ipywidgets = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
